<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/elevatedCardBackground"
    app:cardCornerRadius="16dp"
    app:cardElevation="@dimen/card_elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/lblMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/add_new_event"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/event_name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@id/tilEventName"
            app:layout_constraintTop_toBottomOf="@+id/lblMessage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/lblEventName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name_hint"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColorGrey" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblReminderNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/reminder_notes"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@id/tilReminderNotes"
            app:layout_constraintTop_toBottomOf="@+id/tilEventName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilReminderNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/lblReminderNotes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReminderNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_notes_hint"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColorGrey" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblReminderCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/reminder_count"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@id/cvReminderCount"
            app:layout_constraintTop_toBottomOf="@+id/tilReminderNotes" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvReminderCount"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblReminderCount"
            app:strokeColor="@color/colorSecondary"
            app:cardBackgroundColor="@color/colorWhiteOrBlackInNight"
            app:strokeWidth="@dimen/_1sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clReminderCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvReminderCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="10" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnReminderCountPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_plus"
                    android:tint="@color/textColor"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnReminderCountMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_minus"
                    android:tint="@color/textColor"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorDim"
                    android:clickable="false"
                    android:focusable="false"
                    android:visibility="gone"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvReminderCount"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/cvReminderCount"
            android:text="@string/submit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>



